--- a/cyztookit/AndroidManifest.xml
+++ b/cyztookit/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.helloactivity">
-    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="23"/>
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
     <application android:label="一个后台程序">
         <activity android:name="HelloActivity">
             <intent-filter>
