--- a/cyztookit/AndroidManifest.xml
+++ b/cyztookit/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="一个后台程序"
         android:theme="@style/AppTheme">
         <activity android:name=".CameraActivity"
-            android:theme="@style/Theme.AppCompat"></activity>
+           ></activity>
         <activity
             android:name=".HelloActivity"
             android:launchMode="singleInstance">
