--- a/cyztookit/AndroidManifest.xml
+++ b/cyztookit/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:theme="@style/AppTheme">
         <activity android:name=".CameraActivity"
            ></activity>
+        <activity android:name=".LoginFormActivity"
+            ></activity>
         <activity
             android:name=".HelloActivity"
             android:launchMode="singleInstance">
