Init ViewPage Test

--- a/cyztookit/AndroidManifest.xml
+++ b/cyztookit/AndroidManifest.xml
@@ -10,6 +10,8 @@
         android:icon="@drawable/img"
         android:label="一个后台程序"
         android:theme="@style/AppTheme">
+        <activity android:name=".ViewPagerActivity"
+           ></activity>
         <activity android:name=".CameraActivity"
            ></activity>
         <activity android:name=".LoginFormActivity"
