--- a/cyztookit/build.gradle
+++ b/cyztookit/build.gradle
@@ -53,6 +53,9 @@ android {
         debug.setRoot('build-types/debug')
         release.setRoot('build-types/release')
     }
+    lintOptions{
+    	
+    }
 }
 
 dependencies {
