--- a/cyztookit/AndroidManifest.xml
+++ b/cyztookit/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+	    android:allowBackup="false"
         android:icon="@drawable/img"
         android:label="一个后台程序"
         android:theme="@style/AppTheme">
