--- a/cyztookit/AndroidManifest.xml
+++ b/cyztookit/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:icon="@drawable/logo"
         android:label="一个后台程序"
         android:theme="@style/AppTheme">
+        <activity android:name=".ExampleFragmentActivity"
+           ></activity>
         <activity android:name=".ViewPagerActivity"
            ></activity>
         <activity android:name=".CameraActivity"
