--- a/cyztookit/AndroidManifest.xml
+++ b/cyztookit/AndroidManifest.xml
@@ -5,12 +5,15 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
 
     <application
 	    android:allowBackup="false"
         android:icon="@drawable/logo"
         android:label="一个后台程序"
         android:theme="@style/AppTheme">
+        <activity android:name=".LogActivity"
+           ></activity>
         <activity android:name=".ExampleFragmentActivity"
            ></activity>
         <activity android:name=".ViewPagerActivity"
