add viewmodel activity

--- a/cyztookit/AndroidManifest.xml
+++ b/cyztookit/AndroidManifest.xml
@@ -16,6 +16,8 @@
         android:icon="@drawable/logo"
         android:label="一个后台程序"
         android:theme="@style/AppTheme">
+        <activity android:name=".ViewModelActivity"
+           ></activity>
         <activity android:name=".ImageDFinderActivity"
            ></activity>
         <activity android:name=".LogActivity"
