--- a/cyztookit/build.gradle
+++ b/cyztookit/build.gradle
@@ -59,17 +59,26 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.viewpager2:viewpager2:1.0.0"
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    def fragment_version = "1.2.5"
+	implementation fileTree(dir: "libs", include: ["*.jar"])
+		implementation 'androidx.appcompat:appcompat:1.1.0'
+		implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+		implementation "androidx.viewpager2:viewpager2:1.0.0"
+		testImplementation 'junit:junit:4.12'
+		androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+		androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+		def fragment_version = "1.2.5"
 
-    // Java language implementation
-    implementation "androidx.fragment:fragment:$fragment_version"
+		// Java language implementation
+		implementation "androidx.fragment:fragment:$fragment_version"
 
+		def lifecycle_version = "2.3.0"
+		//def arch_version = "2.1.0"
+
+		// ViewModel
+		implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+		// LiveData
+		implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+		// Lifecycles only (without ViewModel or LiveData)
+		//implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
 
 }
